k8_test_prod/mongo-external-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongo
spec:
  type: ExternalName
  externalName: ds137720.mlab.com
