k8_test_prod/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rewrite
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
            path: /

          - backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
            path: /api(/|$)(.*)
